--- a/stock/public/index.html
+++ b/stock/public/index.html
@@ -11,6 +11,7 @@
     />
     <link href='https://fonts.googleapis.com/css?family=Alegreya Sans SC' rel='stylesheet'>
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo.png" type="logo"/>
+    <script src="https://accounts.google.com/gsi/client" async defer></script>
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
